# squish

./: .gitignore  README.md  check_outputs.py  debug_head.py  diagnose_compression.py  enhanced_debug.py  main.py  pyproject.toml
src/squish/: compress.py  distill.py  model_compressor.py  svd.py
tests/: test_compress.py  test_model_compressor.py  test_sanity.py  test_svd.py
