[project]
name = "squish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.46.1",
    "boto3>=1.39.4",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "huggingface-hub[hf-xet]>=0.33.2",
    "lingua>=4.15.0",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "necessary>=0.4.3",
    "numpy>=2.3.1",
    "omegaconf>=2.3.0",
    "peft>=0.16.0",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pylyzer>=0.0.82",
    "pypdf>=5.7.0",
    "pypdfium2>=4.30.1",
    "pyright>=1.1.403",
    "pytest-mock>=3.14.1",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "ruff>=0.12.3",
    "ruff-lsp>=0.0.62",
    "safetensors>=0.5.3",
    "seaborn>=0.13.2",
    "smart-open>=7.3.0.post1",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "typer>=0.16.0",
    "types-tqdm>=4.67.0.20250516",
    "wandb>=0.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
]

[project.scripts]
squish-compress = "squish.compress:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=squish --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/squish"]

[tool.coverage.report]
fail_under = 90

[tool.mypy]
mypy_path = "src"
